<resources>
    <string name="ok" translatable="false">OK</string>
    <string name="app_name" translatable="false">Minlan</string>

    <string name="next">Next</string>
    <string name="hint_app_name">Search app…</string>
    <string name="minlan_settings">Minlan Settings</string>
    <string name="dyk">Did you know?</string>
    <string name="dyk_settings">You can access settings by long pressing the clear button.</string>
    <string name="mark_favourite">Mark Favourite</string>
    <string name="hide_app">Hide App</string>
    <string name="mark_unfavourite">Mark as not favourite</string>
    <string name="unhide_app">Unhide app</string>
    <string name="dyk_hidden_apps">You can view hidden apps by searching for \'@hidden\' in the searchbar.</string>
    <string name="dyk_app_menu">You can long-press an app to open it\'s menu.</string>
    <string name="app_info">App info</string>

    <string name="select_text_color">Select text color</string>
    <string name="dark_icons">DARK ICONS</string>
    <string name="show_hints">Show hints</string>
    <string name="show_clock">SHOW CLOCK</string>
    <string name="show_icons">Show icons</string>
</resources>