<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textFontWeight="10"
        android:textSize="40sp"
        android:text="@string/minlan_settings" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/dark_icons_cb"
                android:textSize="15sp"
                android:background="@drawable/view_background"
                android:textColor="@color/white"
                android:text="@string/dark_icons"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/show_clock_cb"
                android:textColor="@color/white"
                android:background="@drawable/view_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_clock"
                android:textAlignment="center"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/view_background"
                android:backgroundTint="@color/view_background"
                android:id="@+id/select_color_b"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/select_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/show_hints"
                android:textSize="15sp"
                android:backgroundTint="@color/view_background"
                android:textColor="@color/white"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/show_hints"
                android:background="@drawable/view_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>